reset password added

--- a/.env
+++ b/.env
@@ -23,3 +23,6 @@ EXPRESSJS_COMPLETE_AUTHENTICATION_TOKEN_COOKIE_KEY=EXPRESSJS_COMPLETE_AUTHENTICA
 
 # SAVED FILE PATH
 PROFILE_PIC_DIRECTORY=public
+
+# MESSAGEBIRD
+MESSAGEBIRD_API_KEY=ABCDEFghijklmnopqrstUVWXYZ
