--- a/.env
+++ b/.env
@@ -13,7 +13,7 @@ JWT_SECRET_KEY=JWT_SECRET_KEY_CAN_BE_ANY_STRING_NUMBER_CHARACTER
 TOKEN_EXPIRES=5d
 
 # COOKIE
-EXPRESSJS_COMPLETE_AUTHENTICATION_TOKEN_COOKIE_KEY=EXPRESSJS_COMPLETE_AUTHENTICATION_TOKEN_COOKIE_KEY
+COOKIE_KEY=COOKIE_KEY
 
 # SAVED FILE PATH
 PROFILE_PIC_DIRECTORY=public
